Fix notification content text wrap

--- a/packages/tempus-client_v2/src/components/notification/Notification.scss
+++ b/packages/tempus-client_v2/src/components/notification/Notification.scss
@@ -38,8 +38,8 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    white-space: pre-line;
-    padding-left: 28px;
+    white-space: pre-line !important;
+    padding-left: 24px;
   }
 
   .tc__notification__link {
